# websrv

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  TESTING.md  bitbucket-pipelines.yml  rustfmt.toml  sbom.json  server.pem  sonar-project.properties  websrv.default
.cargo/: config.toml
.config/: nextest.toml
.github/: copilot-instructions.md
.github/scripts/: check_license_policy.py  generate_sbom.sh  validate_notice.py
.github/workflows/: build.yml  release.yml  sbom.yml  test.yml
src/: args.rs  auth.rs  config.rs  lib.rs  main.rs  mcap.rs  recording.rs  services.rs  shutdown.rs  ssl.rs  storage.rs  studio.rs  upload.rs  websocket.rs
tests/: ssl_integration.rs  studio_api_client.rs  websocket_compression.rs  websocket_integration.rs
