[package]
name = "edgefirst-websrv"
description = "EdgeFirst Web UI Server"
repository = "https://github.com/EdgeFirstAI/websrv"
license = "Apache-2.0"
version = "3.8.2"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false

[profile.profiling]
inherits = "release"
strip = false
debug = true

[dependencies]
actix = "0.13.5"
actix-files = "0.6.9"
actix-web = { version = "4.12.1", features = ["openssl"] }
actix-web-actors = "4.3.0"
actix-web-lab = "0.24.3"
anyhow = "1.0.100"
async-stream = "0.3.6"
camino = "1.2.1"
cdr = "0.2.4"
chrono = { version = "0.4.42", features = ["serde"] }
edgefirst-client = "2.6.4"
clap = { version = "4.5.53", features = ["derive", "env"] }
env_logger = "0.11.8"
fs2 = "0.4.3"
hostname = "0.4.2"
log = "0.4.28"
mcap = "0.23.4"
memmap = "0.7.0"
mime = "0.3.17"
openssl = { version = "0.10.75", features = ["vendored"] }
percent-encoding = "2.3.2"
pnet = "0.35.0"
rcgen = "0.14"
regex = "1.12.2"
serde = "1.0.219"
serde_json = "1.0.140"
sysinfo = "0.37.2"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "time", "io-std", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { version = "1.18.1", features = ["v1", "v4", "serde"] }
zenoh = "1.6.2"

[dev-dependencies]
actix-rt = "2.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies"], default-features = false }
tempfile = "3.15"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
